The endecening